# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
gendiff/: cli.py  diff_builder.py  gen_diff.py  generate_diff.py  parser.py
gendiff/formatters/: __init__.py  formatters.py  plain.py  string.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff/tests/: test_generate_diff.py
gendiff/tests/fixtures/: flat_file2.json  json_string.txt
gendiff/tests/fixtures/json/: right_test_json.txt
