[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "A Python project for gendiff"
authors = ["Milena Egiazarian <milena.egiazarian77@mail.ru>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "gendiff" }
]

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
pytest = "^8.3.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>1.0.0"]
build-backend = "poetry.core.masonry.api"
